--- a/index.html
+++ b/index.html
@@ -4,8 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CropFusion</title>
+
+        <!-- Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+
+
+
 </head>
 <body>
-    
+    <div class="container-fluid">
+
+        <!-- Navigation-->
+        <div class="row">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">CropFusion</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="justify-content-end collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Vision</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Papers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Videos</a>
+                            </li>
+                        </ul>
+                  </div>
+                </div>
+              </nav>
+        </div>
+
+        <!-- Cover Image -->
+        <div class="row">
+            <!-- Image Source: https://unsplash.com/photos/aerial-photography-of-field-xDLEUTWCZdc -->
+            <div class="col-12 coverImageContainer">
+                <img class="coverImage" src="images/coverImage.jpg" alt="Cover image">
+                <div class="coverImageText">
+                    <h1>Machine Learning × Agriculture</h1>
+                </div>
+            </div>
+        </div>
+
+        <div class="spacerDiv"></div>
+
+        <!-- Vision Statement -->
+        <div class="row rowPadding">
+            <div class="col-sm-12 columnContainer blackBackground">
+                <div class="quote">
+                    <h1>
+                        Utilizing insights from <b>multimodal data</b> and <b>machine learning</b> 
+                        to increase crop yield and empower <b>precision farming</b>. 
+                    </h1>
+                </div>
+            </div>
+        </div>
+
+        <div class="spacerDiv"></div>
+
+        <!-- Papers -->
+        <div class="row">
+            <div class="col-12">
+                <h1>Papers</h1>
+                <div class="table-responsive card"> 
+                <table class="table">
+                    <!-- <thead>
+                        <tr>
+                            <th scope="col">First</th>
+                            <th scope="col">Last</th>
+                            <th scope="col">Handle</th>
+                        </tr>
+                    </thead> -->
+                    <tbody>
+                        <div class="spacerDiv"></div>
+                        <tr>
+                            <td>Mark</td>
+                            <td>@mdo</td>
+                        </tr>
+                    </tbody>
+                  </table>
+                </div> 
+            </div>
+        </div>
+        
+        <!-- Videos -->
+        <div class="row">
+            <div class="col-12">
+                <!-- This should be a two column grid
+                (automatically resizes to one column for mobile breakpoint) -->
+                <h1>Videos</h1>
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+
+    <!-- Bootstrap Javascript-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
