--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 			<div  data-aos="fade-up-left" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6">
                 <iframe class="videoFormat" src="https://www.youtube-nocookie.com/embed/46DQ3-Ub5rs?si=al66wE8kbZwS7f8r&amp;start=146" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
+            <div data-aos="fade-up-right" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6" style>
+                <iframe class="videoFormat" src="https://www.youtube-nocookie.com/embed/wz3llu8RGAQ?si=qH3GBHjumsolG5lX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+			<div  data-aos="fade-up-left" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6">
+                <iframe class="videoFormat" src="https://www.youtube-nocookie.com/embed/ZcmAz_GyxCY?si=OTMdgHvafWnmWIwa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
         </div>
 
         <div class="spacerDiv"></div>
