small spacing changes

--- a/index.html
+++ b/index.html
@@ -117,13 +117,14 @@
 			<div data-aos="fade-up-right" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6" style>
                 <iframe class="videoFormat" src="https://www.youtube.com/embed/vpJ3I82a_HY?si=C9PiyCR1fwPHTPlg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-			<div  data-aos="fade-up-left" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6">
+			<div  data-aos="fade-up-left" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6 responsiveMarginTop">
                 <iframe class="videoFormat" src="https://www.youtube-nocookie.com/embed/46DQ3-Ub5rs?si=al66wE8kbZwS7f8r&amp;start=146" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
+            <div class="spacerDiv"></div>
             <div data-aos="fade-up-right" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6" style>
                 <iframe class="videoFormat" src="https://www.youtube-nocookie.com/embed/wz3llu8RGAQ?si=qH3GBHjumsolG5lX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-			<div  data-aos="fade-up-left" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6">
+			<div  data-aos="fade-up-left" data-aos-once="true" class="col-sm-12 col-md-6 col-lg-6 responsiveMarginTop">
                 <iframe class="videoFormat" src="https://www.youtube-nocookie.com/embed/ZcmAz_GyxCY?si=OTMdgHvafWnmWIwa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
         </div>
